--- a/index.html
+++ b/index.html
@@ -20,94 +20,97 @@
 </head>
 
 <body>
-    <!-- nav bar -->
-    <nav class="navbar navbar-expand-md navbar-dark">
-        <!-- Brand -->
-        <a class="navbar-brand" href="#">My WebSite 👨🏻‍💻🪄</a>
+    <header>
+        <!-- nav bar -->
+        <nav class="navbar navbar-expand-md navbar-dark">
+            <!-- Brand -->
+            <a class="navbar-brand" href="#">My WebSite 👨🏻‍💻🪄</a>
 
-        <!-- Toggler/collapsibe Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            <!-- Toggler/collapsibe Button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="./index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./pages/aboutMe.html">About me</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./pages/skills.html">Skills & Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./pages/contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <!-- jumbotron inicia -->
-    <div class="jumbotron">
-        <div class="card1">
-        <h1>Bienvenido al sitio web del desarrollador:<br><strong>Santiago Aaron Gonzalez.</strong></h1>
-        <br>
-        <p>Aqui podras ver informacion sobre este joven developer....</p>
-        <button type="button" class="btn btn-warning"> <a href="./pages/aboutMe.html">Mas Info</a></button>
-        </div>
-    </div>
-
-    <!-- Section -->
-    <h3>Breve descripción:</h3>
-    <hr class="separation">
-    <div class="container-fluid margen">
-        <div class="row">
-            <div class="nleft col-sm-6">
-                <h4>Quien soy</h4>
-                <p>Mi nombre es Santiago Gonzalez y actualmente tengo 23 años de edad. Soy un joven Uruguayo que le
-                    gusta todo lo relacionado a la tecnologia y las empresas, particularmente me fascina el mundo del
-                    desarrollo de software.<br><br> En esta web vas a poder encontrar un portfolio y asi ver como esta
-                    siendo mi desarrollo en esta carrera tan linda y apasionante.<br> Por otro lado van a poder ver
-                    cosas que me interesan y algunos de mis gustos como por ejemplo: lenguajes favoritos, paises,
-                    deportes, etc.</p>
-                <button type="button" class="btn btn-warning"><a href="./pages/aboutMe.html">Mas Info</a></button>
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/aboutMe.html">About me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/skills.html">Skills & Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/contact.html">Contact</a>
+                    </li>
+                </ul>
             </div>
-            <div class="nright col-sm-6 item-right zoom"></div>
-        </div>
-    </div>
-    <hr class="separation">
-    <div class="container-fluid">
-        <div class="row margen-sm">
-            <section class="gallery">
-                <div class="item item1 zoom"></div>
-                <div class="item item2 zoom"></div>
-                <div class="item item3 zoom"></div>
-                <div class="item item4 zoom"></div>
-                <div class="item item5 zoom"></div>
-                <div class="item item6 zoom"></div>
-                <div class="item item7 zoom"></div>
+        </nav>
+    </header>
+    <main>
+        <!-- jumbotron inicia -->
+        <section class="jumbotron">
+            <div class="card1">
+                <h1>Bienvenido al sitio web del desarrollador:<br><strong>Santiago Aaron Gonzalez.</strong></h1>
+                <br>
+                <p>Aqui podras ver informacion sobre este joven developer....</p>
+                <button type="button" class="btn btn-warning"> <a href="./pages/aboutMe.html">Mas Info</a></button>
+            </div>
+        </section>
+
+        <!-- Section -->
+        <h3>Breve descripción:</h3>
+        <hr class="separation">
+        <section class="container-fluid margen">
+            <div class="row">
+                <article class="nleft col-sm-6">
+                    <h4>Quien soy</h4>
+                    <p>Mi nombre es Santiago Gonzalez y actualmente tengo 23 años de edad. Soy un joven Uruguayo que le
+                        gusta todo lo relacionado a la tecnologia y las empresas, particularmente me fascina el mundo
+                        del
+                        desarrollo de software.<br><br> En esta web vas a poder encontrar un portfolio y asi ver como
+                        esta
+                        siendo mi desarrollo en esta carrera tan linda y apasionante.<br> Por otro lado van a poder ver
+                        cosas que me interesan y algunos de mis gustos como por ejemplo: lenguajes favoritos, paises,
+                        deportes, etc.</p>
+                    <button type="button" class="btn btn-warning"><a href="./pages/aboutMe.html">Mas Info</a></button>
+                </article>
+                <article class="nright col-sm-6 item-right zoom"></article>
+            </div>
+        </section>
+        <hr class="separation">
+        <div class="container-fluid">
+            <section class="row margen-sm">
+                <article class="gallery">
+                    <div class="item item1 zoom"></div>
+                    <div class="item item2 zoom"></div>
+                    <div class="item item3 zoom"></div>
+                    <div class="item item4 zoom"></div>
+                    <div class="item item5 zoom"></div>
+                    <div class="item item6 zoom"></div>
+                    <div class="item item7 zoom"></div>
+                </article>
+                <hr class="separation">
             </section>
-            <hr class="separation">
         </div>
-
-        <footer>
-            <p>Todos los derechos reservados. <br>Copyright 2022.</p>
-            <div class="redes">
-                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-                <a href="https://github.com/santgonnzalez"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/santigonnzalez1"><i class="fa-brands fa-linkedin"></i></a>
-            </div>
-        </footer>
-        <div class="go">
-            <a href="#" class="go-up">
-                <i class="fa-sharp fa-solid fa-circle-up"></i>
-            </a>
-        </div>
-
-
+    </main>
+    <footer>
+        <p>Todos los derechos reservados. <br>Copyright 2022.</p>
+        <section class="redes">
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://github.com/santgonnzalez"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/santigonnzalez1"><i class="fa-brands fa-linkedin"></i></a>
+        </section>
+    </footer>
+    <div class="go">
+        <a href="#" class="go-up">
+            <i class="fa-sharp fa-solid fa-circle-up"></i>
+        </a>
+    </div>
 
 
 
@@ -117,15 +120,17 @@
 
 
 
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-            integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous">
-        </script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
