--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,98 +18,99 @@
         rel="stylesheet">
     <title>Document</title>
 </head>
+<main>
 
-<body class="body-contact">
-    <nav class="navbar navbar-expand-md navbar-dark">
-        <!-- Brand -->
-        <a class="navbar-brand" href="#">My WebSite 👨🏻‍💻🪄</a>
+    <body class="body-contact">
+        <nav class="navbar navbar-expand-md navbar-dark">
+            <!-- Brand -->
+            <a class="navbar-brand" href="#">My WebSite 👨🏻‍💻🪄</a>
 
-        <!-- Toggler/collapsibe Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            <!-- Toggler/collapsibe Button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/aboutMe.html">About me</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/skills.html">Skills & Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-            </ul>
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/aboutMe.html">About me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/skills.html">Skills & Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <br>
+        <!-- Formulario -->
+        <hr class="separation">
+        <div class="container">
+            <form action="/action_page.php">
+                <div class="form-group">
+                    <label for="name">Nombre: </label>
+                    <input type="name" class="form-control" id="name">
+                </div>
+                <div class="form-group">
+                    <label for="country">Pais: </label>
+                    <input type="country" class="form-control" id="country">
+                </div>
+                <div class="form-group">
+                    <label for="pwd">Email: </label>
+                    <input type="password" class="form-control" id="pwd">
+                </div>
+                <p>Soy: </p>
+                <div class="checkbox">
+                    <label><input type="checkbox" value=""> Desarrollador</label>
+                </div>
+                <div class="checkbox">
+                    <label><input type="checkbox" value=""> Diseñador</label>
+                </div>
+                <div class="checkbox">
+                    <label><input type="checkbox" value=""> Empresa / Reclutador</label>
+                </div>
+                <div class="checkbox">
+                    <label><input type="checkbox" value=""> Otro</label>
+                </div>
+                <div class="form-group">
+                    <label for="comment">Podes dejar un comentario explicando el motivo de por que quieres ponerte en
+                        contacto conmigo en la caja de abajo:</label>
+                    <textarea class="form-control" rows="5" id="comment"></textarea>
+                </div>
+                <button type="submit" class="btn btn-default  boton">Submit</button>
+            </form>
         </div>
-    </nav>
-
-    <br>
-    <!-- Formulario -->
-    <hr class="separation">
-    <div class="container">
-        <form action="/action_page.php">
-            <div class="form-group">
-                <label for="name">Nombre: </label>
-                <input type="name" class="form-control" id="name">
-            </div>
-            <div class="form-group">
-                <label for="country">Pais: </label>
-                <input type="country" class="form-control" id="country">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Email: </label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <p>Soy: </p>
-            <div class="checkbox">
-                <label><input type="checkbox" value=""> Desarrollador</label>
-            </div>
-            <div class="checkbox">
-                <label><input type="checkbox" value=""> Diseñador</label>
-            </div>
-            <div class="checkbox">
-                <label><input type="checkbox" value=""> Empresa / Reclutador</label>
-            </div>
-            <div class="checkbox">
-                <label><input type="checkbox" value=""> Otro</label>
-            </div>
-            <div class="form-group">
-                <label for="comment">Podes dejar un comentario explicando el motivo de por que quieres ponerte en
-                    contacto conmigo en la caja de abajo:</label>
-                <textarea class="form-control" rows="5" id="comment"></textarea>
-            </div>
-            <button type="submit" class="btn btn-default  boton">Submit</button>
-        </form>
+</main>
+<hr class="separation">
+<footer>
+    <p>Todos los derechos reservados. <br>Copyright 2022.</p>
+    <div class="redes">
+        <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+        <a href="https://github.com/santgonnzalez"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/santigonnzalez1"><i class="fa-brands fa-linkedin"></i></a>
     </div>
-
-    <hr class="separation">
-    <footer>
-        <p>Todos los derechos reservados. <br>Copyright 2022.</p>
-        <div class="redes">
-            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="https://github.com/santgonnzalez"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/santigonnzalez1"><i class="fa-brands fa-linkedin"></i></a>
-        </div>
-    </footer>
+</footer>
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous">
-    </script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+    integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous">
+</script>
 </body>
 
 </html>
