actualizacion de SEO

--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="About-me el lugar donde podras conocer sobre el developer Santiago Gonzalez">
+    <meta name="keywords" content="Software developer, lenguajues de programacion, HTML, CSS, proyectos, SASS, Boostrap, desarrollo profesional, crecimiento">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -154,7 +156,7 @@
                     <article class="like3-left col-sm-6">
                         <h4>Club Nacional De Football</h4>
                         <hr class="separation">
-                        <p>Soy hincha del cuadro mas laureado y mas grande Uruguay ---> Nacional.
+                        <p>Soy hincha del cuadro mas laureado y mas grande de Uruguay ---> Nacional.
                             <br>
                             <br>
                             Tambien es unos de los clubes mas importantes de America y del mundo entero.
