Cambio de paleta de colores & ultimos cambios pre entrega final de coder.

--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -214,14 +214,14 @@
             <h3> Lugares del mundo: </h3>
             <div class="container-fluid">
                 <div class="row">
-                    <article class="gallery">
-                        <div class="item item1 zoom"></div>
-                        <div class="item item2 zoom"></div>
-                        <div class="item item3 zoom"></div>
-                        <div class="item item4 zoom"></div>
-                        <div class="item item5 zoom"></div>
-                        <div class="item item6 zoom"></div>
-                        <div class="item item7 zoom"></div>
+                    <article class="gallery-world">
+                        <div class="place place1 zoom" title="New York"></div>
+                        <div class="place place2 zoom" title="Atenas"></div>
+                        <div class="place place3 zoom" title="Amsterdam"></div>
+                        <div class="place place4 zoom" title="Patagonia"></div>
+                        <div class="place place5 zoom" title="Patagonia"></div>
+                        <div class="place place6 zoom" title="Tokio"></div>
+                        <div class="place place7 zoom" title="Gran Cañon"></div>
                     </article>
                 </div>
             </div>
