--- a/pages/skills.html
+++ b/pages/skills.html
@@ -110,7 +110,7 @@
                                     obviamente lo pude
                                     haber realizado mucho mejor, pero en su momento estue muy orgulloso de como quedo.
                                 </p>
-                                <button type="button" class="btn btn-warning"><a
+                                <button type="button" class="btnS btn-warning"><a
                                         href="./primerWebResponsive/ExamenFront1_Santiago/index.html">Entrega final de
                                         front</a></button>
                             </article>
@@ -122,7 +122,7 @@
                                     simplemente para practicar y mejor mis habilidades con Js y al mismo tiempo tocar un
                                     poco de Html y
                                     Css.</p>
-                                <button type="button" class="btn btn-warning"><a
+                                <button type="button" class="btnS btn-warning"><a
                                         href="./calculadora1/index.html">Calculadora 1
                                     </a></button>
                             </article>
@@ -132,7 +132,7 @@
                                 <p>En agosto de 2022 volvi a hacer una calculadora pero esta vez un poco mas linda
                                     esteticamente
                                     hablando:</p>
-                                <button type="button" class="btn btn-warning"><a
+                                <button type="button" class="btnS btn-warning"><a
                                         href="./calculadora2/index.html">Calculadora 2
                                     </a></button>
                             </article>
